fixed spacing for star border

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -348,6 +348,10 @@ footer .border {
   letter-spacing: 0.7em;
 }
 
+.border .no-space {
+  letter-spacing: 0;
+}
+
 footer li {
   display: inline;
   font-size: 40px;
